src/test/error/macro5.lns
macro _hoge() {
   {
      macro _foo() { // error
      }
   }
}
